--- a/CHATBOT_CBAHI/requirements.txt
+++ b/CHATBOT_CBAHI/requirements.txt
@@ -62,6 +62,7 @@ hyperlink==21.0.0
 idna==3.7
 importlib_metadata==8.0.0
 incremental==22.10.0
+install==1.3.5
 ipykernel==6.15.1
 ipython==8.4.0
 ipython-genutils==0.2.0
